--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
     "target": "es5",
     "lib": [
+
       "dom",
       "dom.iterable",
       "esnext"
+
     ],
     "allowJs": true,
     "skipLibCheck": true,
